@startuml
class love.mcfxu.medicalPlatform.domain.entity.UserEntity {
- Integer userId
- String userAccountNumber
- String userPwd
- String userPhone
- Integer userSex
- Integer userRole
- String userName
- String openId
- String headImg
- String city
- Date createTime
+ String getOpenId()
+ void setOpenId(String)
+ String getHeadImg()
+ void setHeadImg(String)
+ String getCity()
+ void setCity(String)
+ Date getCreateTime()
+ void setCreateTime(Date)
+ Integer getUserId()
+ void setUserId(Integer)
+ String getUserAccountNumber()
+ void setUserAccountNumber(String)
+ String getUserPwd()
+ void setUserPwd(String)
+ String getUserPhone()
+ void setUserPhone(String)
+ Integer getUserSex()
+ void setUserSex(Integer)
+ Integer getUserRole()
+ void setUserRole(Integer)
+ String getUserName()
+ void setUserName(String)
}
class love.mcfxu.medicalPlatform.domain.entity.HealthCommonSense {
- Integer healthCommonSenseId
- String authorName
- String topic
- Date releaseDate
+ Integer getHealthCommonSenseId()
+ void setHealthCommonSenseId(Integer)
+ String getAuthorName()
+ void setAuthorName(String)
+ String getTopic()
+ void setTopic(String)
+ Date getReleaseDate()
+ void setReleaseDate(Date)
}
class love.mcfxu.medicalPlatform.domain.entity.ServiceEvaluation {
- Integer serviceEvaluationId
- Integer registrationSheetId
- Date registerTime
- Integer doctorId
- Integer patientId
- String serviceEvaluationDetails
+ Integer getServiceEvaluationId()
+ void setServiceEvaluationId(Integer)
+ Integer getRegistrationSheetId()
+ void setRegistrationSheetId(Integer)
+ Date getRegisterTime()
+ void setRegisterTime(Date)
+ Integer getDoctorId()
+ void setDoctorId(Integer)
+ Integer getPatientId()
+ void setPatientId(Integer)
+ String getServiceEvaluationDetails()
+ void setServiceEvaluationDetails(String)
}
class love.mcfxu.medicalPlatform.domain.entity.RegistrationSheet {
- Integer registrationCardId
- Date registerTime
- Integer doctorId
- String department
- String furtherDepartment
- Integer patientId
- Integer state
- String openId
- String outTradeNo
- String ip
- Integer totalFee
+ Integer getTotalFee()
+ void setTotalFee(Integer)
+ String getIp()
+ void setIp(String)
+ String getOutTradeNo()
+ void setOutTradeNo(String)
+ String getOpenId()
+ void setOpenId(String)
+ Integer getState()
+ void setState(Integer)
+ Integer getRegistrationCardId()
+ void setRegistrationCardId(Integer)
+ Date getRegisterTime()
+ void setRegisterTime(Date)
+ Integer getDoctorId()
+ void setDoctorId(Integer)
+ String getDepartment()
+ void setDepartment(String)
+ String getFurtherDepartment()
+ void setFurtherDepartment(String)
+ Integer getPatientId()
+ void setPatientId(Integer)
}
class love.mcfxu.medicalPlatform.domain.entity.DiagnosticSpecification {
- Integer diagnosticSpecificationId
- Integer doctorId
- Integer patientId
- Integer registrationCardId
- String consultingContent
- String advice
+ Integer getDiagnosticSpecificationId()
+ void setDiagnosticSpecificationId(Integer)
+ Integer getDoctorId()
+ void setDoctorId(Integer)
+ Integer getPatientId()
+ void setPatientId(Integer)
+ Integer getRegistrationCardId()
+ void setRegistrationCardId(Integer)
+ String getConsultingContent()
+ void setConsultingContent(String)
+ String getAdvice()
+ void setAdvice(String)
}
class love.mcfxu.medicalPlatform.domain.entity.PublicInformation {
- Integer publicInformationId
- String contactNumber
- String summary
- String url
+ Integer getPublicInformationId()
+ void setPublicInformationId(Integer)
+ String getContactNumber()
+ void setContactNumber(String)
+ String getSummary()
+ void setSummary(String)
+ String getUrl()
+ void setUrl(String)
}
class love.mcfxu.medicalPlatform.domain.entity.ServiceInformation {
- Integer serviceDepartmentId
- String serviceDepartment
- String serviceFurtherDepartment
- Integer doctorId
+ Integer getServiceDepartmentId()
+ void setServiceDepartmentId(Integer)
+ String getServiceDepartment()
+ void setServiceDepartment(String)
+ String getServiceFurtherDepartment()
+ void setServiceFurtherDepartment(String)
+ Integer getDoctorId()
+ void setDoctorId(Integer)
}


java.io.Serializable <|.. love.mcfxu.medicalPlatform.domain.entity.UserEntity
java.io.Serializable <|.. love.mcfxu.medicalPlatform.domain.entity.HealthCommonSense
java.io.Serializable <|.. love.mcfxu.medicalPlatform.domain.entity.ServiceEvaluation
java.io.Serializable <|.. love.mcfxu.medicalPlatform.domain.entity.RegistrationSheet
java.io.Serializable <|.. love.mcfxu.medicalPlatform.domain.entity.DiagnosticSpecification
java.io.Serializable <|.. love.mcfxu.medicalPlatform.domain.entity.PublicInformation
java.io.Serializable <|.. love.mcfxu.medicalPlatform.domain.entity.ServiceInformation
@enduml